--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cinema_management
 spring.datasource.username=root
 spring.datasource.password=123456
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #mybatis.config-location=classpath:mybatis/mybatis-config.xml
 #mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
