--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/cinema_management
-spring.datasource.username=root
-spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-#mybatis.config-location=classpath:mybatis/mybatis-config.xml
-#mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
-server.port=8080
+#spring.datasource.url=jdbc:mysql://0.0.0.0:3306/cinema_management
+#spring.datasource.password=123456
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.docker.compose.enabled=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
