have added VNPAY into my app

--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,16 @@
             <artifactId>modelmapper</artifactId>
             <version>3.2.0</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.mybatis</groupId>-->
         <!--            <artifactId>mybatis</artifactId>-->
