--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,11 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
-        <!--        <dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <version>3.1.4</version>
+        </dependency><!--        <dependency>-->
         <!--            <groupId>org.mybatis</groupId>-->
         <!--            <artifactId>mybatis</artifactId>-->
         <!--            <version>3.5.10</version>-->
