--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
         <!--            <version>3.5.10</version>-->
         <!--        </dependency>-->
 
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
