--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,16 @@ services:
     volumes:
       - ./mysql/data:/var/lib/mysql
       - ./mysql/cinema_management_script.sql:/docker-entrypoint-initdb.d/cinema_management_script.sql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - db
+    environment:
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    restart: always
+    ports:
+      - 8081:81
