--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/cinema_management
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cinema_management
 spring.datasource.username=root
 spring.datasource.password=visualc++
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
